domain/libthreema/macros/tests/fail/02-not-u8.stderr
error[E0308]: mismatched types
 --> tests/fail/02-not-u8.rs:9:47
  |
9 |     let result: [u8; 4] = concat_fixed_bytes!(d); // d is a u16 array
  |                                               ^ expected `[u8; _]`, found `[u16; 2]`
  |
  = note: expected array `[u8; _]`
             found array `[u16; 2]`

error[E0308]: mismatched types
  --> tests/fail/02-not-u8.rs:10:50
   |
10 |     let result: [u8; 8] = concat_fixed_bytes!(a, d); // d is a u16 array
   |                                                  ^ expected `[u8; _]`, found `[u16; 2]`
   |
   = note: expected array `[u8; _]`
              found array `[u16; 2]`
